fix font-size : collapse

--- a/src/components/Collapse/index.scss
+++ b/src/components/Collapse/index.scss
@@ -35,11 +35,12 @@
       line-height: 1.4;
     }
 
+    &-content ul,
     &-content ul li {
-      margin-bottom: 5px;
-      font-size: inherit;
-      color: #000;
-    }
+    font-size: inherit;
+  }
+
+  
 
     @media screen and (max-width: 1024px) {
     &-header {
@@ -49,12 +50,16 @@
       span{
       font-size: 20px;
     }
-
-    }
+  }
 
     &-content {
       font-size: 14px;
       padding: 12px 16px;
+    }
+
+    &-content ul,
+    &-content ul li {
+      font-size: inherit;
     }
   }
 
@@ -74,5 +79,11 @@
       font-size: 12px; 
       padding: 10px 14px;
     }
+
+    &-content ul,
+    &-content ul li {
+      font-size: inherit;
+    }
+
   }
 }
