--- a/src/pages/Apartment/index.scss
+++ b/src/pages/Apartment/index.scss
@@ -184,7 +184,7 @@
 
     li {
       margin-bottom: 5px;
-      font-size: 16px;
+      font-size: inherit;
       color: #000;
     }
   }
